# tcpsniffer

./: build.gradle  settings.gradle
demo/: build.gradle
demo/src/androidTest/java/com/nikialeksey/tcpsniffer/: ExampleInstrumentedTest.java
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/nikialeksey/tcpsniffer/demo/: MainActivity.java
demo/src/main/res/layout/: activity_main.xml
demo/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  build.gradle
lib/jni/libpcap/include/: pcap-bpf.h  pcap-namedb.h
lib/src/androidTest/java/com/nikialeksey/tcpsniffer/: ExampleInstrumentedTest.java
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: tcpsniffer.cpp
lib/src/main/java/com/nikialeksey/tcpsniffer/: NativeLib.java
lib/src/test/java/com/nikialeksey/tcpsniffer/: ExampleUnitTest.java
